[tool.poetry]
name = "source-and-measure"
version = "1.0.0-dev0"
package-mode = "false"
description = "An example that sequences two measurements, where the `NI-DCPower` is used for sourcing and `NI-DMM` for measurement."
authors = ["National Instruments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python = "^3.9"
ni-measurement-plugin-sdk-service = {version = "^2.1.0", allow-prereleases = true}
sequence_logger = {path = "../../src/sequence_logger", develop = true}

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ni-python-styleguide = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
