[tool.poetry]
name = "ni_measurement_plugin_sequencer"
version = "1.0.0"
description = "Python sequence script generator by using Measurement Plug-In Client."
authors = ["NI <opensource@ni.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
mako = "^1.3.5"
ni-measurement-plugin-sdk-service = {version = "^2.1.0"}
ni-measurement-plugin-sdk-generator = {version = "^2.1.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ni-python-styleguide = "^0.4.6"
bandit = { version = "^1.7", extras = ["toml"] }
ni_sequence_logger = {path = "../ni_sequence_logger"}  # Required only for sequence execution, not for generation.

[tool.poetry.scripts]
ni-measurement-plugin-sequencer = "ni_measurement_plugin_sequencer:create_sequence"

[tool.bandit]
skips = [
  "B702", # use_of_mako_templates
]
exclude_dirs = [".venv"]

[[tool.mypy.overrides]]
module = "mako.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
