[tool.poetry]
name = "sequence-logger"
version = "0.1.0-dev0"
description = "A simple logger package"
authors = ["National Instruments"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "sequence_logger", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"